2022-01-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Fixed minor formatting issue
	* sample/util/geometry.rb: Fixed bug in geomSolidSphere

2022-01-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated GLFW-related scripts

2022-01-05  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Samples now use new style API

2022-01-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* [Breaking Change] Changed naming conventions (glViewport -> GL.Viewport, GL_TRUE -> GL::TRUE)
	* [Breaking Change] All 'load_lib' methods are now changed to receive full path to dynamic library and boolean to switch outpur error report while importing symbols
	* opengl-bindings.gemspec: Bumped version
	* opengl-bindings-v1.gemspec: Added. Will be used for release of version 1.6 series
	* Note that still all samples other than 'simple.rb' and 'report_env.rb' won't work.

2022-01-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml
	* Changed internal structure for efficiency. Please refer version/1.6 branch if you want to check previous implementation
	* sample: Fixed several bugs

2021-10-31  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2021-07-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated gl.xml.

2021-05-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2021-03-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* 2020 -> 2021

2021-01-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2020-12-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/glfw_build.sh: Modified to build x86_64 and arm64 universal binary for Apple Silicon macOS.
	* Updated using latest gl.xml.

2020-11-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2020-07-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2020-05-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added platform-specific API
