@@ -5582,7 +5582,9 @@ typedef unsigned int GLhandleARB;
             <unused start="0x8F68" vendor="ARM"/>
         <enum value="0x8F69" name="GL_TEXTURE_ASTC_DECODE_PRECISION_EXT"/>
         <enum value="0x8F6A" name="GL_TEXTURE_UNNORMALIZED_COORDINATES_ARM" group="SamplerParameterF,SamplerParameterI,GetTextureParameter,TextureParameterName"/>
-            <unused start="0x8F6B" end="0x8F6F" vendor="ARM"/>
+            <unused start="0x8F6B" end="0x8F6D" vendor="ARM"/>
+        <enum value="0x8F6E" name="GL_NUM_SURFACE_COMPRESSION_FIXED_RATES_EXT" group="InternalFormatPName"/>
+            <unused start="0x8F6F" end="0x8F6F" vendor="ARM"/>
     </enums>
 
     <enums namespace="GL" start="0x8F70" end="0x8F7F" vendor="HI" comment="For Mark Callow, Khronos bug 4055. Shared with EGL.">
@@ -6896,7 +6898,30 @@ typedef unsigned int GLhandleARB;
     </enums>
 
     <enums namespace="GL" start="0x96C0" end="0x96CF" vendor="ARM" comment="Contact Jan-Harald Fredriksen">
-            <unused start="0x96C0" end="0x96CF" vendor="ARM"/>
+        <enum value="0x96C0" name="GL_SURFACE_COMPRESSION_EXT" group="TexStorageAttribs,GetTextureParameter"/>
+        <enum value="0x96C1" name="GL_SURFACE_COMPRESSION_FIXED_RATE_NONE_EXT" group="TexStorageAttribss"/>
+        <enum value="0x96C2" name="GL_SURFACE_COMPRESSION_FIXED_RATE_DEFAULT_EXT" group="TexStorageAttribs"/>
+            <unused start="0x96C3" end="0x96C3" vendor="ARM"/>
+        <enum value="0x96C4" name="GL_SURFACE_COMPRESSION_FIXED_RATE_1BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96C5" name="GL_SURFACE_COMPRESSION_FIXED_RATE_2BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96C6" name="GL_SURFACE_COMPRESSION_FIXED_RATE_3BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96C7" name="GL_SURFACE_COMPRESSION_FIXED_RATE_4BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96C8" name="GL_SURFACE_COMPRESSION_FIXED_RATE_5BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96C9" name="GL_SURFACE_COMPRESSION_FIXED_RATE_6BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96CA" name="GL_SURFACE_COMPRESSION_FIXED_RATE_7BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96CB" name="GL_SURFACE_COMPRESSION_FIXED_RATE_8BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96CC" name="GL_SURFACE_COMPRESSION_FIXED_RATE_9BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96CD" name="GL_SURFACE_COMPRESSION_FIXED_RATE_10BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96CE" name="GL_SURFACE_COMPRESSION_FIXED_RATE_11BPC_EXT" group="TexStorageAttribs"/>
+        <enum value="0x96CF" name="GL_SURFACE_COMPRESSION_FIXED_RATE_12BPC_EXT" group="TexStorageAttribs"/>
+    </enums>
+
+    <enums namespace="GL" start="0x96D0" end="0x96DF" vendor="ARM" comment="Contact Jan-Harald Fredriksen">
+            <unused start="0x96D0" end="0x96DF" vendor="ARM"/>
+    </enums>
+
+    <enums namespace="GL" start="0x96E0" end="0x96EF" vendor="ANGLE" comment="Reserved for Ken Russell - ANGLE (via github pull request)">
+            <unused start="0x96E0" end="0x96EF" vendor="ANGLE"/>
     </enums>
 
 <!-- Enums reservable for future use. To reserve a new range, allocate one
@@ -6908,8 +6933,8 @@ typedef unsigned int GLhandleARB;
      file) File requests in the Khronos Bugzilla, OpenGL project, Registry
      component. -->
 
-    <enums namespace="GL" start="0x96D0" end="99999" vendor="ARB" comment="RESERVED FOR FUTURE ALLOCATIONS BY KHRONOS">
-        <unused start="0x96D0" end="99999" comment="RESERVED"/>
+    <enums namespace="GL" start="0x96F0" end="99999" vendor="ARB" comment="RESERVED FOR FUTURE ALLOCATIONS BY KHRONOS">
+        <unused start="0x96F0" end="99999" comment="RESERVED"/>
     </enums>
 
 <!-- Historical large block allocations, all unused except (in older days) by IBM -->
@@ -24606,6 +24631,25 @@ typedef unsigned int GLhandleARB;
             <alias name="glTexStorage3DMultisample"/>
         </command>
         <command>
+            <proto>void <name>TexStorageAttribs2DEXT</name></proto>
+            <param group="TextureTarget"><ptype>GLenum</ptype> <name>target</name></param>
+            <param><ptype>GLsizei</ptype> <name>levels</name></param>
+            <param group="SizedInternalFormat"><ptype>GLenum</ptype> <name>internalformat</name></param>
+            <param><ptype>GLsizei</ptype> <name>width</name></param>
+            <param><ptype>GLsizei</ptype> <name>height</name></param>
+            <param group="TexStorageAttribs">const int *<name>attrib_list</name></param>
+        </command>
+        <command>
+            <proto>void <name>TexStorageAttribs3DEXT</name></proto>
+            <param group="TextureTarget"><ptype>GLenum</ptype> <name>target</name></param>
+            <param><ptype>GLsizei</ptype> <name>levels</name></param>
+            <param group="SizedInternalFormat"><ptype>GLenum</ptype> <name>internalformat</name></param>
+            <param><ptype>GLsizei</ptype> <name>width</name></param>
+            <param><ptype>GLsizei</ptype> <name>height</name></param>
+            <param><ptype>GLsizei</ptype> <name>depth</name></param>
+            <param group="TexStorageAttribs">const int *<name>attrib_list</name></param>
+        </command>
+        <command>
             <proto>void <name>glTexStorageMem1DEXT</name></proto>
             <param group="TextureTarget"><ptype>GLenum</ptype> <name>target</name></param>
             <param><ptype>GLsizei</ptype> <name>levels</name></param>
@@ -39826,6 +39870,13 @@ typedef unsigned int GLhandleARB;
                 <command name="glEGLImageTargetTextureStorageEXT"/>
             </require>
         </extension>
+        <extension name="GL_EXT_EGL_image_storage_compression" supported="gles2">
+            <require>
+                <enum name="GL_SURFACE_COMPRESSION_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_NONE_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_DEFAULT_EXT"/>
+            </require>
+        </extension>
         <extension name="GL_EXT_EGL_sync" supported="gl|glcore"/>
         <extension name="GL_EXT_YUV_target" supported="gles2">
             <require>
@@ -42173,6 +42224,28 @@ typedef unsigned int GLhandleARB;
                 <command name="glTextureStorage1DEXT"/>
                 <command name="glTextureStorage2DEXT"/>
                 <command name="glTextureStorage3DEXT"/>
+            </require>
+        </extension>
+        <extension name="GL_EXT_texture_storage_compression" supported="gles2">
+            <require>
+                <enum name="GL_SURFACE_COMPRESSION_EXT"/>
+                <enum name="GL_NUM_SURFACE_COMPRESSION_FIXED_RATES_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_NONE_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_DEFAULT_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_1BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_2BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_3BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_4BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_5BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_6BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_7BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_8BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_9BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_10BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_11BPC_EXT"/>
+                <enum name="GL_SURFACE_COMPRESSION_FIXED_RATE_12BPC_EXT"/>
+                <command name="TexStorageAttribs2DEXT"/>
+                <command name="TexStorageAttribs3DEXT"/>
             </require>
         </extension>
         <extension name="GL_EXT_texture_swizzle" supported="gl">
