@@ -509,6 +509,21 @@ module GLExt
   end # self.get_ext_enum_GL_EXT_EGL_image_storage
 
 
+  def self.define_ext_enum_GL_EXT_EGL_image_storage_compression
+    GL.const_set('SURFACE_COMPRESSION_EXT', 0x96C0) unless defined?(GL::SURFACE_COMPRESSION_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_NONE_EXT', 0x96C1) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_NONE_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_DEFAULT_EXT', 0x96C2) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_DEFAULT_EXT)
+  end # self.define_ext_enum_GL_EXT_EGL_image_storage_compression
+
+  def self.get_ext_enum_GL_EXT_EGL_image_storage_compression
+    [
+      'SURFACE_COMPRESSION_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_NONE_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_DEFAULT_EXT',
+    ]
+  end # self.get_ext_enum_GL_EXT_EGL_image_storage_compression
+
+
   def self.define_ext_enum_GL_EXT_YUV_target
     GL.const_set('SAMPLER_EXTERNAL_2D_Y2Y_EXT', 0x8BE7) unless defined?(GL::SAMPLER_EXTERNAL_2D_Y2Y_EXT)
     GL.const_set('TEXTURE_EXTERNAL_OES', 0x8D65) unless defined?(GL::TEXTURE_EXTERNAL_OES)
@@ -2220,6 +2235,47 @@ module GLExt
       'RG16F_EXT',
     ]
   end # self.get_ext_enum_GL_EXT_texture_storage
+
+
+  def self.define_ext_enum_GL_EXT_texture_storage_compression
+    GL.const_set('SURFACE_COMPRESSION_EXT', 0x96C0) unless defined?(GL::SURFACE_COMPRESSION_EXT)
+    GL.const_set('NUM_SURFACE_COMPRESSION_FIXED_RATES_EXT', 0x8F6E) unless defined?(GL::NUM_SURFACE_COMPRESSION_FIXED_RATES_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_NONE_EXT', 0x96C1) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_NONE_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_DEFAULT_EXT', 0x96C2) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_DEFAULT_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_1BPC_EXT', 0x96C4) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_1BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_2BPC_EXT', 0x96C5) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_2BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_3BPC_EXT', 0x96C6) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_3BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_4BPC_EXT', 0x96C7) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_4BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_5BPC_EXT', 0x96C8) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_5BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_6BPC_EXT', 0x96C9) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_6BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_7BPC_EXT', 0x96CA) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_7BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_8BPC_EXT', 0x96CB) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_8BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_9BPC_EXT', 0x96CC) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_9BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_10BPC_EXT', 0x96CD) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_10BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_11BPC_EXT', 0x96CE) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_11BPC_EXT)
+    GL.const_set('SURFACE_COMPRESSION_FIXED_RATE_12BPC_EXT', 0x96CF) unless defined?(GL::SURFACE_COMPRESSION_FIXED_RATE_12BPC_EXT)
+  end # self.define_ext_enum_GL_EXT_texture_storage_compression
+
+  def self.get_ext_enum_GL_EXT_texture_storage_compression
+    [
+      'SURFACE_COMPRESSION_EXT',
+      'NUM_SURFACE_COMPRESSION_FIXED_RATES_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_NONE_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_DEFAULT_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_1BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_2BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_3BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_4BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_5BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_6BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_7BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_8BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_9BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_10BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_11BPC_EXT',
+      'SURFACE_COMPRESSION_FIXED_RATE_12BPC_EXT',
+    ]
+  end # self.get_ext_enum_GL_EXT_texture_storage_compression
 
 
   def self.define_ext_enum_GL_EXT_texture_type_2_10_10_10_REV
