@@ -1,3 +1,7 @@
+2022-01-09  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Updated using latest gl.xml
+
 2022-01-08  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Fixed minor formatting issue
